--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,17 +1,35 @@
 @import 'libs/bootstrap-reboot.min';
+@import 'base/variables';
+@import 'base/mixins';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
 * {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    color: #fff;
 }
 
-.header {
-    height: 100vh;
-    overflow: hidden;
-    background-color: black;
-    &__bg-video {
-        opacity: 0.7;
+body {
+    box-sizing: border-box;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    &:hover {
+        color: white;
+        text-decoration: none;
     }
 }
+
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+// import blocks
+
+@import 'blocks/buttons';
+@import 'blocks/title';
+@import 'blocks/header';
