--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,21 +1,30 @@
 .header {
    height: 100vh;
    width: 100%;
-   background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../../img/header__bg.jpg') center (center/cover) no-repeat;
-   padding-top: 200px;
+   background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../../img/header__bg.jpg') center (center/cover) no-repeat;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   &__content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      margin-top: -50px;
+   }
 
    &__myname {
-      text-transform: uppercase;
       text-shadow: 0px 0px 5px black;
       position: relative;
       z-index: 0;
+      padding-right: 36px;
       &:before {
          content: "";
          display: inline-block;
          @include brand-circle(36px, $main-color);
          position: relative;
          top: 10px;
-         left: 25px;
+         left: 18px;
          z-index: -1;
       }
    }
@@ -27,10 +36,18 @@
       max-width: 532px;
    }
    &__button {
-      width: 50%;
+      width: 532px;
       font-size: 20px;
       letter-spacing: 0;
       box-shadow: 0px 0px 15px #000;
+      text-shadow: 0 0 5px black;
+      transition: all 1s;
+      &:hover {
+         background-color: rgba(0, 0, 0, 0);
+         box-shadow: none;
+         border: 1px solid #fff;
+         border-radius: 10px;
+      }
    }
    &__about-me {
       font-weight: 700;
