--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,36 +1,33 @@
 @import 'libs/bootstrap-reboot.min';
 @import 'base/variables';
 @import 'base/mixins';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;500&display=swap');
 
 * {
-    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     color: #fff;
 }
-
 body {
+    font-family: 'Roboto Mono', monospace;
     box-sizing: border-box;
 }
-
-a {
-    color: white;
-    text-decoration: none;
-    &:hover {
-        color: white;
-        text-decoration: none;
-    }
-}
-
 .container {
     max-width: 1140px;
     margin: 0 auto;
 }
 
+a {
+    color: #fff;
+    text-decoration: none;
+    &:hover {
+       color: #fff;
+       text-decoration: none;
+    }
+ }
+
 // import blocks
 
-@import 'blocks/buttons';
+@import 'blocks/upheader';
 @import 'blocks/title';
 @import 'blocks/header';
-@import 'blocks/aside-menu';
