--- a/src/sass/blocks/_upheader.scss
+++ b/src/sass/blocks/_upheader.scss
@@ -17,6 +17,7 @@
    height: 64px;
    position: relative;
    z-index: 5;
+   transition: all 1s;
    &__contact {
       font-size: 18px;
       a {
