--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -16,15 +16,11 @@ a {
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       text-align: center;
       margin: 0 auto;
-   }
-   &__inner {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
+      height: 50vh;
+      margin-top: 100px;
    }
    &__myname {
       text-shadow: 0px 0px 5px black;
