--- a/src/sass/blocks/_tech.scss
+++ b/src/sass/blocks/_tech.scss
@@ -1,39 +1,31 @@
 .tech {
+   height: 100%;
    &__container {
       display: flex;
+      justify-content: space-between;
+      align-items: center;
       max-width: 1140px;
+      height: 29.5vh;
+      margin: 0 auto;
    }
    &__item {
-      width: 100px;
-      height: 100px;
-      margin: 0 15px;
-      border: 2px solid #fff;
+      width: 150px;
+      height: 150px;
+      border: 3px solid #fff;
       border-radius: 100%;
-      padding: 30px;
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: all 1s;
+      transition: all 0.5s;
+      filter: grayscale(100%); 
       &:hover {
-         border: 2px solid $main-color;
-      }
-      &:nth-child(4) {
-         img {
-            width: 75px;
-         }
-      }
-      &:nth-child(5) {
-         img {
-            width: 66px;
-         }
-      }
-      &:nth-child(6) {
-         img {
-            width: 66px;
-         }
+         filter: grayscale(0%); 
+         background-color: #000;
+         border: 3px solid #fff;
       }
       img {
-         width: 45px;
+         max-width: 90%;
+         min-width: 50%;
       }
    }
 }
