--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -20,7 +20,7 @@ a {
       text-align: center;
       margin: 0 auto;
       height: 50vh;
-      margin-top: 100px;
+      padding-top: 175px;
    }
    &__myname {
       text-shadow: 0px 0px 5px black;
