--- a/src/sass/blocks/_tech.scss
+++ b/src/sass/blocks/_tech.scss
@@ -7,12 +7,13 @@
       max-width: 1140px;
       height: 29.5vh;
       margin: 0 auto;
+      padding-top: 125px;
    }
    &__item {
       width: 150px;
       height: 150px;
-      border: 3px solid #fff;
-      border-radius: 100%;
+      // border: 2px solid #fff;
+      // border-radius: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -20,11 +21,13 @@
       filter: grayscale(100%); 
       &:hover {
          filter: grayscale(0%); 
-         background-color: #000;
-         border: 3px solid #fff;
+         // border-radius: 100%;
+         // background-color: #000;
+         // border: 3px solid #fff;
       }
+      &:nth-child()
       img {
-         max-width: 90%;
+         max-width: 120%;
          min-width: 50%;
       }
    }
