--- a/src/sass/blocks/_upheader.scss
+++ b/src/sass/blocks/_upheader.scss
@@ -1,43 +1,46 @@
-.upheader__background {
-   position: fixed;
-   width: 100%;
-   height: 64px;
-   background-color: #000;
-   opacity: 0.7;
-   z-index: 0;
-   filter: blur(5px);
-}
-
 .upheader {
-   display: flex;
-   justify-content: space-around;
-   align-items: center;
-   line-height: 18px;
-   text-align: center;
    height: 64px;
    position: relative;
+   left: 50%;
+   transform: translateX(-50%);
+   max-width: 1140px;
    z-index: 5;
-   transition: all 1s;
-   &__contact {
-      font-size: 18px;
-      a {
-         font-size: 16px;
-         span {
-            text-decoration: underline;
-         }
-      }
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   font-size: 18px;
+   &__background {
+      position: absolute;
+      width: 200%;
+      height: 64px;
+      background-color: #000;
+      opacity: 0.8;
+      z-index: 0;
+      filter: blur(15px);
+   }
+
+   &__contacts {
+      
    }
    &__email {
-      padding-right: 30px;
+      text-align: center;
    }
+   &__phone {
+      text-align: center;
+   }
+   &__phone-link {
+
+   }
+
+   // ! smm img(svg) styles IN HTML
+
    &__smm {
-      line-height: 40px;
+      width: 125px;
       display: flex;
-      &-link {
-         padding-left: 20px;
-      }
-      &-img {
-         width: 32px;
-      }
+      align-items: center;
+      justify-content: space-between;
+   }
+   &__smm-link {
+      
    }
 }
