--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -3,3 +3,11 @@
    font-weight: 700;
    line-height: 60px;
 }
+
+.subtitle {
+   font-size: 30px;
+   position: relative;
+   z-index: 0;
+   font-weight: 100;
+   transition: all 1s;
+}
