--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -8,11 +8,11 @@
       height: 89.5vh;
       display: flex;
       flex-direction: column;
-      justify-content: space-around;
    }
    &__main {
       text-align: center;
-      padding-top: 200px;
+      padding-top: 300px;
+      padding-bottom: 125px;
    }
    &__subtitle {
       font-weight: 400;
@@ -22,7 +22,7 @@
    }
    &__title {
       font-weight: 900;
-      font-size: 125px;
+      font-size: 120px;
       line-height: 135px;
       margin-bottom: 35px;
       text-transform: uppercase;
@@ -54,6 +54,7 @@
       justify-content: space-between;
       align-items: center;
       width: 100%;
+      flex-wrap: wrap;
       &-box {
 
       }
