--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -36,7 +36,8 @@ body {
 // ! blocks
 @import 'blocks/header';
 @import 'blocks/promo';
-@import 'blocks/adaptive';
 @import 'blocks/about';
 @import 'blocks/portfolio';
 @import 'blocks/contact';
+@import 'blocks/footer';
+@import 'blocks/adaptive';
