--- a/src/sass/blocks/_adaptive.scss
+++ b/src/sass/blocks/_adaptive.scss
@@ -56,6 +56,9 @@
    .promo__tech {
       justify-content: space-around;
    }
+   .portfolio__grid {
+      height: 220px;
+   }
 }
 @media (max-width: 960px) {
    .promo__subtitle {
@@ -67,6 +70,12 @@
    .promo__tech-img {
       height: 70px;
       width: 70px;
+   }
+   .line {
+      width: 300px;
+   }
+   .contact__right-block {
+      display: none;
    }
 }
 @media (max-width: 680px) {
@@ -82,6 +91,12 @@
    }
 }
 @media (max-width: 470px) {
+   .header__email {
+      margin-left: 15px;
+   }
+   .header__phone {
+      margin-left: 15px;
+   }
    .promo__subtitle {
       font-size: 18px;
       top: 50px;
@@ -94,7 +109,31 @@
       width: 200px;
       font-size: 20px;
    }
+   .about {
+      .container {
+         flex-direction: column;
+      }
+      &__descr-title {
+         margin-top: 20px;
+      }
+   }
    .header__side-margin {
       margin: 10px 5px;
+   }
+   .portfolio__title {
+      font-size: 40px;
+   }
+   .contact__input-item {
+      width: 140px;
+   }
+   .contact__textarea-input {
+      width: 295px;
+   }
+   .contact__inputs {
+      display: flex;
+      justify-content: center;
+   }
+   .portfolio__grid {
+      height: 180px;
    }
 }
