--- a/src/sass/blocks/_contact.scss
+++ b/src/sass/blocks/_contact.scss
@@ -1,5 +1,6 @@
 .contact {
    height: 400px;
+   margin-bottom: 90px;
    .container {
       display: flex;
       justify-content: center;
@@ -39,9 +40,16 @@
    &__button {
       width: 100%;
       height: 40px;
-   }
-   &__form {
-      
+      background-color: rgba(0,0,0,0);
+      border: 1px solid black;
+      font-size: 22px;
+      text-transform: uppercase;
+      transition: all 0.5s;
+      &:hover {
+         background-color: $main-color;
+         color: #fff;
+         border: none;
+      }
    }
    &__right-block {
       display: flex;
