--- a/src/sass/blocks/_contact.scss
+++ b/src/sass/blocks/_contact.scss
@@ -45,6 +45,7 @@
       font-size: 22px;
       text-transform: uppercase;
       transition: all 0.5s;
+      margin-top: 10px;
       &:hover {
          background-color: $main-color;
          color: #fff;
@@ -76,6 +77,11 @@
       img {
          height: 400px;
          border-radius: 7px;
+      }
+   }
+   span {
+      a {
+         color: blue;
       }
    }
 }
